--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.3.4",
+    "react-useanimations": "^2.10.0",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
